fix(hero): add true to layout-spacing css variable.

--- a/src/hero/_hero.scss
+++ b/src/hero/_hero.scss
@@ -43,7 +43,8 @@
   .hero-body {
     // padding: $layout-spacing; // old spectre.css
     // padding: get-var('layout-spacing'); // old @angular-package/spectre.css
-    @include padding('layout-spacing');
+    // @include padding('layout-spacing'); // old @angular-package/spectre.css
+    @include padding(('layout-spacing', true));
   }
 }
 
